--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ rand = "0.8.4"
 noise = "0.8.2"
 bytemuck = "1.13.1"
 quaternion = "1.0.0"
+matchbox_socket = "0.6.1"
+futures = "0.3"
+tokio = "1.29"
+futures-timer = { version = "3" }
