--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ cgmath = "0.18"
 winit = "0.28"
 vulkano = "0.33.0"
 vulkano-util = "0.33.0"
+vulkano-win = "0.33.0"
 vulkano-shaders = "0.33.0"
 rand = "0.8.4"
 noise = "0.8.2"
@@ -20,3 +21,4 @@ matchbox_socket = "0.6.1"
 futures = "0.3"
 tokio = "1.29"
 futures-timer = { version = "3" }
+obj-rs = "0.7.1"
