--- a/settings.yaml
+++ b/settings.yaml
@@ -23,3 +23,6 @@ graphics_settings:
   transparent_shadow_ray_dist: 50
   ao_ray_dist: 40
 delta_time: 0.03333333
+replay_settings:
+    replay_file: replay.txt
+    record_replay: false
