--- a/settings.yaml
+++ b/settings.yaml
@@ -3,7 +3,7 @@ remote_url: ws://primd.net:3536/extreme_bevy?next=2
 is_remote: false
 player_count: 1
 fullscreen_toggle: F11
-card_file: decks/default.txt
+card_file: decks/effects.txt
 movement_controls:
   forward: !Key W
   backward: !Key S
