--- a/settings.yaml
+++ b/settings.yaml
@@ -3,7 +3,7 @@ remote_url: ws://primd.net:3536/extreme_bevy?next=2
 is_remote: false
 player_count: 1
 fullscreen_toggle: F11
-card_file: decks/effects.txt
+card_file: decks/characters/flying_rocketeer.ron
 movement_controls:
   forward: !Key W
   backward: !Key S
@@ -16,6 +16,8 @@ ability_controls:
 - !Mouse Left
 - !Mouse Right
 - !Key E
+- !Key LShift
+- !Key T
 graphics_settings:
   primary_ray_dist: 100
   transparency_ray_dist: 75
