--- a/settings.yaml
+++ b/settings.yaml
@@ -1,5 +1,5 @@
-local_url: ws://127.0.0.1:3536/extreme_bevy?next=2
-remote_url: ws://primd.net:3536/extreme_bevy?next=2
+local_url: ws://127.0.0.1:3536/extreme_bevy?next=
+remote_url: ws://primd.net:3536/extreme_bevy?next=
 is_remote: false
 player_count: 1
 fullscreen_toggle: F11
