--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 
-cgmath = "0.18"
+cgmath = { version = "0.18", features = ["serde"] }
 winit = { version = "0.28.2", features = ["serde"] }
 vulkano = "0.34.1"
 vulkano-util = "0.34.1"
