--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ serde = { version = "1", features = ["derive"] }
 egui_winit_vulkano = "0.26.0"
 puffin = "0.18"
 puffin_http = "0.15"
+clippers = "0.1.2"
