--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ puffin_http = "0.15"
 clippers = "0.1.2"
 chrono = "0.4.31"
 rfd = "0.12.1"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
