--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ futures-timer = { version = "3" }
 obj-rs = "0.7.1"
 ron = "0.8"
 serde_yaml = "0.9.25"
+serde_json = "1.0.111"
 serde = { version = "1", features = ["derive"] }
 egui_winit_vulkano = "0.27.0"
 puffin = "0.18"
