--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ clippers = "0.1.2"
 chrono = "0.4.31"
 rfd = "0.13.0"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
+voxel-shared = { path = ".." }
