add reflection distance setting

--- a/client/settings.yaml
+++ b/client/settings.yaml
@@ -14,6 +14,7 @@ graphics_settings:
   primary_ray_dist: 100
   transparency_ray_dist: 75
   shadow_ray_dist: 40
+  reflection_ray_dist: 20
   transparent_shadow_ray_dist: 40
   ao_ray_dist: 15
 replay_settings:
