--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -32,3 +32,4 @@ rfd = "0.14.1"
 reqwest = { version = "0.12.4", features = ["json", "blocking"] }
 priority-queue = "2.0.3"
 voxel-shared = { path = ".." }
+itertools = "0.13.0"
