--- a/client/settings.yaml
+++ b/client/settings.yaml
@@ -20,7 +20,7 @@ graphics_settings:
 replay_settings:
     replay_folder: replays
     record_replay: false
-do_profiling: true
+do_profiling: false
 crash_log: crash_log.txt
 singleplayer_settings:
     name: "Singleplayer"
