--- a/client/settings.yaml
+++ b/client/settings.yaml
@@ -26,6 +26,7 @@ singleplayer_settings:
     name: "Singleplayer"
     delta_time: 0.02
     is_remote: false
+    rollback_buffer_size: 2
     player_count: 1
     render_size:
       x: 32
@@ -44,6 +45,7 @@ practice_range_settings:
     name: "Practice Range"
     delta_time: 0.02
     is_remote: false
+    rollback_buffer_size: 2
     player_count: 1
     render_size:
       x: 8
@@ -62,6 +64,7 @@ create_lobby_settings:
     name: "Standard Open Multiplayer"
     delta_time: 0.03
     is_remote: true
+    rollback_buffer_size: 15
     player_count: 2
     render_size:
       x: 32
