--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -33,3 +33,4 @@ reqwest = { version = "0.12.4", features = ["json", "blocking"] }
 priority-queue = "2.0.3"
 voxel-shared = { path = ".." }
 itertools = "0.13.0"
+ahash = "0.8.11"
